--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@400;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>Curriculum</title>
 </head>
 
@@ -22,7 +22,7 @@
             <div class="col-md-3 text-center bg-left">
                 <h3 class="mt-4"><b>Perla Marina Encarnación Cabrera</b></h3>
                 <div class="text-center">
-                    <img src="perla.jpg" class="circle" width="200" height="200" alt="thumbnail">
+                    <img src="imgs/perla.jpg" class="circle" width="200" height="200" alt="thumbnail">
                 </div>
                 <h6><b>Dra. en Odontología</b></h6>
                 <p>Mi Objetivo Laboral es llegar a ser una persona destacada en el área laboral donde me desempeñe,
@@ -39,16 +39,19 @@
                 <div class="mt-4 p-4">
 
                     <a class="btn" href="https://api.whatsapp.com/send?phone=18096688787">
-                        <img src="what.png" width="50px" height="50px" alt="whatsapp">
+                        <img src="imgs/what.png" width="50px" height="50px" alt="whatsapp">
                         <p>Whatsapp</p>
                     </a>
 
                     <a class="btn" href="https://www.instagram.com/perla_enc31/?hl=es-la">
-                        <img src="insta.png" width="50px" height="50px" alt="instagram">
+                        <img src="imgs/insta.png" width="50px" height="50px" alt="instagram">
                         <p>Instagram</p>
                     </a>
+
                 </div>
-                
+                <!-- <div class="col-12">
+                    <a href="#" class="btn btn-primary btn-lg">Print</a>
+                </div> -->
             </div>
             <div class="col-md-9 bg-right">
                 <div class="row mt-3 ml-4">
