add color theme

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="theme-color" content="#ffc0cb">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -11,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@400;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
-    <title>Curriculum</title>
+    <title>dra Encarnación</title>
 </head>
 
 <body>
@@ -62,8 +63,8 @@
                     </h1>
                     <div class="list col-12">
 
-                        <h4 style="color: salmon;">Centro Medico Dentisa</h4>
-                        <p>Odontóloga general</p>
+                        <h4 style="color: salmon;">Dentisa</h4>
+                        <p>Odontóloga general <b>Actual</b></p>
 
                         <h4 style="color: salmon;">Centro Medico Padre Fantino</h4>
                         <p>Asistente Dental, Dra. Ivelisse Subervi Maxilofacial</p>
