--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="theme-color" content="#ffc0cb">
+    <meta property="og:title" content="Dra. Encarnación">
+    <meta property="og:description" content="My presentation page">
+    <meta property="og:image" content="https://blackshark537.github.io/dra.Encarnacion/imgs/perla.jpg">
+    <meta property="og:url" content="https://blackshark537.github.io/dra.Encarnacion/">
+    <meta name="twitter:card" content="summary_large_image">
+
+    <meta property="og:site_name" content="Dra. Encarnación">
+    <meta name="twitter:image:alt" content="Alt text for image">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
