--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="theme-color" content="#ffc0cb">
     <meta property="og:title" content="Dra. Encarnación">
-    <meta property="og:description" content="My presentation page">
+    <meta property="og:description" content="Odontóloga General">
     <meta property="og:image" content="https://blackshark537.github.io/dra.Encarnacion/imgs/perla.jpg">
     <meta property="og:url" content="https://blackshark537.github.io/dra.Encarnacion/">
     <meta name="twitter:card" content="summary_large_image">
